# AASX-Sanity

./: .dockerignore  .gitignore  BENCHMARK_REPORT.md  Dockerfile.frontend  GENERALIZATION_PROGRESS.md  ORIGINAL_WORKFLOW_NOTES.md  PROJECT_GOAL.md  README.Docker.md  README.md  SEQUENCE_DIAGRAM.md  T4TTruckFrame_Variant1_MoPoV7-3_27022025.json  UI_UPDATES.md  benchmark_backends.py  benchmark_results.json  check-container-source.ps1  docker-compose.prod.yml  docker-compose.yml  generate_large_json.py  index.html  jsonsanitypro.conf  nginx.conf  package-lock.json  performance_analysis.md  restart_backend.sh  sample_test.json  sample_test_cleaned.json  sample_test_with_duplicates.json  script.js  sh -T git@ifs.dfki.de  show_benchmark_results.py  styles.css  test_simple.json
.cursorrules/: core.md
.github/workflows/: deploy.yml
Backend/: Dockerfile  RuleBasedScriptToCheckBugsV04_1.py  api.py  example_usage.py  helpers.py  rule_adapter.py  rule_engine.py  rule_loader.py  rule_processor.py
BackendGo/: Dockerfile  README.md  diff.go  go.mod  go.sum  handlers.go  main.go  processor.go  types.go
cpp-project/BackendCpp/: CMakeLists.txt  Dockerfile  Makefile  build.sh  example_usage.cpp  test_clean_json  test_clean_json.cpp  test_data.json  test_data_cleaned.json  test_empty_lists.cpp  test_endpoints.sh  test_json  test_json.cpp  test_parallel  test_parallel.cpp
cpp-project/BackendCpp/src/: main.cpp
cpp-project/BackendCpp/src/api/: handlers.cpp  handlers.hpp  server.cpp  server.hpp
cpp-project/BackendCpp/src/json/: parser.cpp  parser.hpp  processor.cpp  processor.hpp  rules.cpp  rules.hpp
cpp-project/BackendCpp/src/parallel/: cpu_executor.cpp  cpu_executor.hpp  cpu_executor_impl.hpp  cuda_executor.cpp  cuda_executor.hpp  framework.hpp  framework_impl.hpp
cpp-project/BackendCpp/src/utils/: logger.cpp  logger.hpp
cpp-project/BackendCpp/tests/: test_basic.cpp
(+3 files in other folders)
